--- a/Python/Caderno.ipynb
+++ b/Python/Caderno.ipynb
@@ -318,22 +318,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "76"
+       "2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "576%100\n"
+    "print(5734%100)\n",
+    "20//7"
    ]
   },
   {
