--- a/Python/Teoria dos Grafos.ipynb
+++ b/Python/Teoria dos Grafos.ipynb
@@ -488,6 +488,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cal': ['SC', 'S'],\n",
+       " 'S': [],\n",
+       " 'SC': ['S', 'U'],\n",
+       " 'U': ['Cal'],\n",
+       " 'Ucla': ['U', 'S', 'SC', 'Cal']}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['SC', 'S']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "E.get('Cal')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
